[gd_scene load_steps=5 format=2]

[ext_resource path="res://Jugador/JugadorClase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Jugador clase.gd" type="Script" id=2]
[ext_resource path="res://Jugador/ControlCamara.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 1.65033
height = 3.66551

[node name="Jugadorclase" type="KinematicBody"]
script = ExtResource( 2 )

[node name="AnimatedHuman" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -0.0411433, -0.999153, 0, 0.999153, -0.0411433, 0, 2.36366, -0.140924 )
shape = SubResource( 1 )

[node name="ControlCamara" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="ControlHorizontal" type="Spatial" parent="ControlCamara"]

[node name="ControlVertical" type="Spatial" parent="ControlCamara/ControlHorizontal"]

[node name="Camara" type="ClippedCamera" parent="ControlCamara/ControlHorizontal/ControlVertical"]
transform = Transform( -0.974925, 0, -0.222536, 0, 1, 0, 0.222536, 0, -0.974925, 0, 3.68502, -8.98948 )
fov = 67.5

[node name="Frente" type="Position3D" parent="ControlCamara/ControlHorizontal/ControlVertical"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 3.23185, 2.27239 )
